Task5/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front-end
  labels:
    role: front-end
spec:
  containers:
  - name: nginx
    image: nginx

---
apiVersion: v1
kind: Pod
metadata:
  name: back-end-api
  labels:
    role: back-end-api
spec:
  containers:
  - name: nginx
    image: nginx

---
apiVersion: v1
kind: Pod
metadata:
  name: admin-front-end
  labels:
    role: admin-front-end
spec:
  containers:
  - name: nginx
    image: nginx

---
apiVersion: v1
kind: Pod
metadata:
  name: admin-back-end-api
  labels:
    role: admin-back-end-api
spec:
  containers:
  - name: nginx
    image: nginx
