Task5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    role: front-end
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-service
spec:
  selector:
    role: back-end-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-service
spec:
  selector:
    role: admin-front-end
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-service
spec:
  selector:
    role: admin-back-end-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
